# CMakeSample

./: CMakeLists.txt  GLM_GLI_SDK_PATH.bat  GenerateProjectFiles.bat  README.md
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
VK/: CMakeLists.txt  CompileGLSL.bat  FS.frag  GLIConfig.cmake  GLMConfig.cmake  ReadMe.txt  Resource.h  VK.cap  VK.cpp  VK.rc  VS.vert  VULKANConfig.cmake  stdafx.cpp
Vulkan/: CMakeLists.txt  VK.cpp  VULKANConfig.cmake  VulkanConfig.cmake
XXX/: XXXConfig.cmake
